--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <p>Esse é um exemplo de site básico.</p>
+        <p>Venha conhecer o Mercado MARK.</p>
         <button id="meuBotao">Clique aqui</button>
         <p id="mensagem"></p>
     </main>
