--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <p>Venha conhecer o Mercado MARK.</p>
-        <button id="meuBotao">Clic</button>
+        <button id="meuBotao">Aperte aqui</button>
         <p id="mensagem"></p>
     </main>
     <script src="script.js"></script>
